<resources>
    <string name="app_name">S.R.R.S</string>
    <string name="loginActivity_name">Login</string>
    <string name="loginActivity_usernameTV">User ID :</string>
    <string name="loginActivity_usernameET">Type your Id here</string>
    <string name="loginActivity_passwordTV">Pass :</string>
    <string name="loginActivity_forgetTV">Forget password?</string>
    <string name="loginActivity_loginBTN">Login</string>
    <string name="loginActivity_signUpBTN">SignUp</string>

    <string name="signUpActivity_userTypeAdmin">Admin</string>
    <string name="signUpActivity_userTypeStudent">Student</string>

    <string name="adminActivity_addUniversity">Add new university </string>
    <string name="adminActivity_addDepartment">Add new department </string>
    <string name="adminActivity_addCourse">Add new course </string>


    <string-array name="level_year">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>

    </string-array>

    <string-array name="simester">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="AR">
        <item>none</item>
        <item>AR111</item>
        <item>AR112</item>
    </string-array>

    <string-array name="EL">
        <item>none</item>
        <item>EL097</item>
        <item>EL098</item>
        <item>EL099</item>
        <item>EL111</item>
        <item>EL112</item>
    </string-array>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="verified_profile">My Profile</string>
    <string name="unverified_profile">My Profile (Unverified)</string>

    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="about">about</string>
    <string name="pastCourses">Past courses</string>

    <string name="logout_menu_item">Sign out</string>
    <string name="welcome_on_signin">Congratulations! you have successfully signed in.</string>
    <string name="default_nouser_signin">No user signed in currently.</string>
    <string name="login_failed">Log in cancelled!</string>
    <string name="login_success">Log in successful.</string>
    <string name="logout_success">Successfully logged out</string>
    <string name="logout_failed">Failed to log out</string>
    <string name="login_unknown_Error">Unknown error while logging in. Please Try again</string>
    <string name="no_connectivity">There is no internet connection. Please try again</string>
    <string name="login_menu_item">Log in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_year">First Year</string>
    <string name="second_year">Second Year</string>
    <string name="choose_courses">choose courses</string>
    <string name="AnyYear">start from any year</string>
    <string name="third_year">third year</string>
    <string name="start">from begining</string>
    <string name="fourth_year">fourth year</string>
    <string name="sixth_year">sixth year</string>
    <string name="seventh_year">seventh year</string>
    <string name="fifth_year">fifth year</string>
    <string name="eighth_year">eight year</string>
    <string name="aboutText">My android application (S.R.R.S) is supported Student registration to manage and recommend the best path to make student closer to graduation, from this point my boundary to create an application dealing, caring and focusing with student and university staff to reduce the gap between university approach and student criteria in registration process. I would like to definite my sincere thankfulness to my advisor Dr. Eid Emary for the nonstop support in this project , Especially it is a graduation project which helped me a lot to overcome the obstacles that stand in front of me. Thank you Dr. Eid and thanks to my lovely University the Arab Open University and thank you all that helped me in any step in this project. I hope you get your admiration and help all students Mariam Ahmed Mostafa Supervised by: Dr.Eid Emary Arab Open University</string>


</resources>
